--- a/UserApp/Views/Pages/Book/AuthorizationPage.xaml
+++ b/UserApp/Views/Pages/Book/AuthorizationPage.xaml
@@ -28,7 +28,7 @@
                     <TextBlock Text="Нет аккаутна?" Foreground="Black" Style="{StaticResource h2}"/>
                     <TextBlock>
             <Hyperlink Foreground="#AEA040" Click="HyperlinkToReg_Click">
-                Зарегистрироватся
+                Зарегистрироваться
             </Hyperlink>
                     </TextBlock>
                 </StackPanel>
