--- a/UserApp/Views/Pages/Book/UpdateProfilePage.xaml
+++ b/UserApp/Views/Pages/Book/UpdateProfilePage.xaml
@@ -8,7 +8,7 @@
       d:DesignWidth="1920"
       Title="UpdateProfilePage">
 
-    <Grid Background="White">
+    <Grid Background="White" x:Name="panel">
         <Grid.Resources>
             <Style TargetType="TextBlock">
                 <Setter Property="TextAlignment" Value="Center"/>
@@ -17,7 +17,9 @@
         </Grid.Resources>
         
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Image Width="300" Source="{Binding User.AvatarPath}"/>
+            <Border CornerRadius="300" Width="300" Height="300">
+                <Image Width="300" Height="300" Stretch="UniformToFill" Source="{Binding User.AvatarPath}"/>
+            </Border>
             <TextBlock>
                 <Hyperlink Command="{Binding UpdateImageCommand}">
                     Изменить фото профиля
@@ -25,8 +27,8 @@
             </TextBlock>
 
             <StackPanel>
-                <Border x:Name="InputUsername" Background="#F2F2F2" CornerRadius="40" Width="700">
-                    <TextBox Background="Transparent" TextAlignment="Center"
+                <Border x:Name="InputUsername" Background="#F2F2F2" CornerRadius="40" Width="700" BorderThickness="0">
+                    <TextBox BorderThickness="0" Background="Transparent" TextAlignment="Center"
                              Text="{Binding User.Username}" FontSize="80" Style="{StaticResource SearchBox}"/>
                 </Border>
             </StackPanel>
@@ -44,12 +46,12 @@
             </TextBlock>
 
             <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
-                <Border x:Name="InputPassword" Background="#F2F2F2" CornerRadius="40" Width="700">
-                    <TextBox Background="Transparent" Text="{Binding Password}" FontSize="80" Style="{StaticResource SearchBox}"/>
+                <Border x:Name="InputPassword" Background="#F2F2F2" CornerRadius="40" Width="700" BorderThickness="0">
+                    <TextBox BorderThickness="0" Background="Transparent" Text="{Binding Password}" FontSize="80" Style="{StaticResource SearchBox}"/>
                 </Border>
-                <Border x:Name="InputNewPassword" Background="#F2F2F2" CornerRadius="40" Width="700"
+                <Border x:Name="InputNewPassword" Background="#F2F2F2" CornerRadius="40" Width="700" BorderThickness="0"
                         Margin="300,0,0,0">
-                    <TextBox Background="Transparent" Text="{Binding NewPassword}" FontSize="80" Style="{StaticResource SearchBox}"/>
+                    <TextBox BorderThickness="0" Background="Transparent" Text="{Binding NewPassword}" FontSize="80" Style="{StaticResource SearchBox}"/>
                 </Border>
             </StackPanel>
             
